# 7dso-discord-bot

./: .gitignore  README.md  SETUP_FR.md  package-lock.json  package.json  tsconfig.json  wrangler.jsonc
.bot-state/: last_refresh.txt
.github/workflows/: update-data.yml
docs/: index.html
docs/data/: banners.json  bosses.json  characters.json  coverage_report.json  familiers.json  guides.json  nourriture.json  objets.json  peche.json  resources.json  team_comps.json  weapons.json
docs/data/characters/: index.json
docs/data/weapons/: index.json
scraper/: CURRENT_SITE_AUDIT.md  README.md  pyproject.toml
scraper/examples/: load_sqlite_example.py
scraper/sds_origin_scraper/: __init__.py  cli.py  crawler.py  exporters.py  fetch.py  merger.py  models.py  report.py  utils.py
scraper/sds_origin_scraper/parsers/: __init__.py  base.py  genshin_gg.py  helpers.py  hideout_gacha.py  seven_ds_origin_gg.py
scraper/tests/: test_page_types.py
scripts/: build_bot_data.py  register-commands.mjs  should_run.py
src/: index.ts
