[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sds-origin-scraper"
version = "0.2.0"
description = "Crawler and canonical merger for Seven Deadly Sins: Origin community sites"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "httpx>=0.27.0",
  "lxml>=5.2.2"
]

[project.optional-dependencies]
browser = ["playwright>=1.54.0"]

[project.scripts]
7dso-scraper = "sds_origin_scraper.cli:main"

[tool.setuptools]
packages = ["sds_origin_scraper", "sds_origin_scraper.parsers"]
